# linkforge

./: .gitignore  AGENTS.md  CHANGELOG.md  CHANGLOG.md  CONTRIBUTING.md  Cargo.toml  PRIVACY.md  README.md  SECURITY.md  TODO.md
.github/workflows/: ci.yml  release-drafts.yml
crates/linkforge-cli/: Cargo.toml
crates/linkforge-cli/src/: main.rs
crates/linkforge-cli/tests/: cli.rs
crates/linkforge-context-menu-gnome/: Cargo.toml
crates/linkforge-context-menu-gnome/src/: main.rs
crates/linkforge-context-menu-windows/: Cargo.toml
crates/linkforge-context-menu-windows/src/: lib.rs
crates/linkforge-core/: Cargo.toml
crates/linkforge-core/src/: lib.rs
crates/linkforge-gui/: Cargo.toml  tauri.conf.json
crates/linkforge-gui/capabilities/: default.json
crates/linkforge-gui/frontend/: index.html  main.js  styles.css
crates/linkforge-gui/src/: backend.rs  main.rs
crates/linkforge-shared/: Cargo.toml
crates/linkforge-shared/src/: lib.rs
debian/: changelog  control  copyright  linkforge-cli.install  linkforge-context-menu-gnome.install  linkforge-context-menu-gnome.postinst  linkforge-context-menu-gnome.prerm  linkforge-gui.install  rules
docs/release/: context-menu-smoke-tests.md  identity.md  install-surface.md  release-checklist.md
packaging/: README.md
packaging/debian/: README.md
packaging/debian/share/nautilus-python/extensions/: linkforge.py
packaging/flatpak/: README.md  io.github.morningfrog.LinkForge.desktop  io.github.morningfrog.LinkForge.metainfo.xml  io.github.morningfrog.LinkForge.yml
packaging/winget/: README.md
packaging/winget/manifests/m/MorningFrog/LinkForge/0.1.0/: MorningFrog.LinkForge.installer.yaml  MorningFrog.LinkForge.locale.en-US.yaml  MorningFrog.LinkForge.yaml
scripts/: set-version.ps1  set-version.sh  validate-release-drafts.ps1  validate-release-drafts.sh
scripts/context-menu/gnome/: install-gnome-extension.sh  uninstall-nautilus-scripts.sh
scripts/context-menu/windows/: Register-LinkForgeContextMenu.ps1  Unregister-LinkForgeContextMenu.ps1
scripts/context-menu/windows/modern/: Register-LinkForgeModernContextMenu.ps1  Unregister-LinkForgeModernContextMenu.ps1
scripts/release/: build-windows-assets.ps1
