[package]
name = "linkforge-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
clap_complete = "4.5.2"
linkforge-core = { version = "0.1.0", path = "../linkforge-core" }

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
tempfile = "3.10.1"

[[bin]]
name = "linkforge"
path = "src/main.rs"
