[package]
name = "linkforge-context-menu-windows"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[target.'cfg(windows)'.dependencies]
linkforge-core = { version = "0.1.0", path = "../linkforge-core" }
windows-core = "0.61.2"
windows = { version = "0.61.3", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
tempfile = "3.10.1"
