[package]
name = "linkforge-context-menu-windows"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[target.'cfg(windows)'.dependencies]
serde_json = "1.0"
windows-core = "0.61.2"
windows = { version = "0.61.3", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Ole",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
] }

[dev-dependencies]
tempfile = "3.10.1"
