[package]
name = "linkforge-gui"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
linkforge-core = { version = "0.1.0", path = "../linkforge-core" }
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.3", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dev-dependencies]
tempfile = "3.10.1"
