[package]
name = "linkforge-gui"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
linkforge-core = { version = "0.1.0", path = "../linkforge-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.7.1"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dev-dependencies]
tempfile = "3.10.1"
